<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/projectName"
        android:layout_width="90dp"
        android:layout_height="46dp"
        android:text="Dubai Transportation System"
        android:textSize="10dp"
        android:width="90dp" />

    <ImageView
        android:id="@+id/projectTime"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#ffffff"
        android:scaleType="center"
        android:src="@drawable/yes"
        android:text="@string/time"
        android:textSize="10dp"
        android:width="46dp" />

    <ImageView
        android:id="@+id/projectCost"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#ffffff"
        android:scaleType="center"
        android:src="@drawable/warning"
        android:text="@string/cost"
        android:textSize="10dp"
        android:width="46dp" />

    <ImageView
        android:id="@+id/projectResource"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#ffffff"
        android:scaleType="center"
        android:src="@drawable/no"
        android:text="@string/resource"
        android:textSize="10dp"
        android:width="46dp" />

    <ImageView
        android:id="@+id/projectProgress"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#ffffff"
        android:scaleType="center"
        android:src="@drawable/warning"
        android:text="@string/progress"
        android:textSize="10dp"
        android:width="46dp" />

    <ImageView
        android:id="@+id/projectEfficiency"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="#ffffff"
        android:scaleType="center"
        android:src="@drawable/warning"
        android:text="@string/efficiency"
        android:textSize="10dp"
        android:width="46dp" />

</LinearLayout>